--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dropdown-menu": "^0.1.1",
     "headlessui": "^0.0.0",
     "heroicon": "^0.0.2",
     "lucide-react": "^0.464.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
